--- a/TestJava/Base.lproj/Main.storyboard
+++ b/TestJava/Base.lproj/Main.storyboard
@@ -85,6 +85,18 @@
                                     <action selector="sendBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UKY-u8-HPl"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sXT-lI-UW8">
+                                <rect key="frame" x="231" y="120" width="62" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="上传文件"/>
+                                <connections>
+                                    <action selector="uploadBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6YU-l3-siD"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2me-bx-YFJ">
+                                <rect key="frame" x="67" y="289" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -92,6 +104,8 @@
                         <outlet property="addressLabel" destination="MCK-rL-kc5" id="X0m-Zr-shN"/>
                         <outlet property="contextLabel" destination="oAH-Ev-XxR" id="aOy-5Z-3gX"/>
                         <outlet property="durationlabel" destination="Qla-co-tin" id="XGf-pz-RJ4"/>
+                        <outlet property="iconView" destination="2me-bx-YFJ" id="i2x-P2-XIc"/>
+                        <outlet property="image" destination="2me-bx-YFJ" id="1bt-fd-fDX"/>
                         <outlet property="nameLabel" destination="6IM-Gb-Vyt" id="RTa-QQ-0CR"/>
                     </connections>
                 </viewController>
